# rust-fontconfig

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  Makefile.in  README.md  fontconfig.rc  fontconfig.rs
src/: fontconfig.rs  lib.rs
