[package]
name = "servo-fontconfig"
version = "0.4.0"
authors = ["The Servo Project Developers"]
repository = "https://github.com/servo/rust-fontconfig/"
documentation = "https://docs.rs/servo-fontconfig"
description = "Rust bindings for fontconfig"
license=  "MIT / Apache-2.0"

[lib]
name = "fontconfig"

[dependencies]
servo-fontconfig-sys = "4.0.0"
libc = "0.2"
